portfolio/src/components/ProjectsSlider/index.css
.projects-slider-wrapper {
    width: 100%;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    background-color: #eeeeea;
}

.projects-slider-container {
    height: 400px;
    display: flex;
    flex-wrap: nowrap;
    justify-content: start;
}

.card {
    width: 100px;
    border-radius: .75rem;
    background-size: cover;
    cursor: pointer;
    overflow: hidden;
    border-radius: 2rem;
    margin: 0 10px;
    display: flex;
    align-items: flex-end;
    transition: .6s cubic-bezier(.28,-0.03,0,.99);
    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
    background-image: url('../../assets/img/contact-img.svg');
    width: 100px; 
    transition: width 0.6s cubic-bezier(.28,-0.03,0,.99);
}

.content {
    opacity: 0;
}

.card.active {
    width: 600px;

    .content {
        position: absolute;
        width: 100%;
        z-index: 3;
        padding: 10px 20px;
        transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
        background: linear-gradient(
            180deg,
            rgba(0, 0, 0, 0.2) 0,
            rgba(0, 0, 0, 1)
        );
        bottom: -70px;

        opacity: 1;
    }

    p.title {
        margin-left: 100px;
        margin-top: 100px;
        opacity: 1

    }

    .title {
        margin-bottom: 0;
        margin-top: 0;
        color: #fff;
        font-size: 24px;
        font-weight: 500;
        line-height: 24px;
        opacity: 1
        
    }

    .description {
        font-size: 14px;
        margin-bottom: 5px;
        color: #fff;
        font-weight: 700;
        opacity: 1

    }

    .btn {
        margin-top: 30px;
        margin-bottom: 10px;
        padding: 0 23px;
        height: 40px;
        line-height: 34px;
        border: 2px solid #ffd700;
        border-radius: 4px;
        font-size: 14px;
        color: #fff;
        background: transparent;
        text-transform: uppercase;
        font-weight: 700;
        transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
        cursor: pointer;
    }

    .btn:hover {
        transform: translateY(-3px);
        background: #ffd700;
    }

    &:after {
        content: "";
        background: linear-gradient(180deg, #ffd700, #000);
        position: absolute;
        left: 0;
        right: 0;
        bottom: 0;
        top: 0;
        width: 100%;
        height: 100%;
        z-index: 2;
        transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
        opacity: 0;
    }

    &:hover:after {
        opacity: 0.85;
    }

    &:hover .content {
        bottom: 0;
        background: transparent;
    }
}
    

